assets/css/styles.css
/* lora-regular - latin */
@font-face {
  font-family: 'Lora';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/lora-v24-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../fonts/lora-v24-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/lora-v24-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/lora-v24-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/lora-v24-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/lora-v24-latin-regular.svg#Lora') format('svg'); /* Legacy iOS */
}
/* lora-700 - latin */
@font-face {
  font-family: 'Lora';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/lora-v24-latin-700.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../fonts/lora-v24-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/lora-v24-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/lora-v24-latin-700.woff') format('woff'), /* Modern Browsers */
       url('../fonts/lora-v24-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/lora-v24-latin-700.svg#Lora') format('svg'); /* Legacy iOS */
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 16px;
  font-family: "Lora";

  --black: #000000;
  --primary: #183AB5;
}

body {
  width: 100%;
  padding: 5rem;
  overflow-y: scroll;
}

body.scroll-disabled {
  overflow-y: hidden;
}

main {
  width: 100%;
}

header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  gap: 3rem;
}

header h1 {
  color: var(--primary);
  font-size: 3.25rem;
  font-weight: bold;
}

header p {
  color: var(--black);
  font-size: 1.5rem;
  text-align: justify;
}

header .image {
  height: 12.5rem;
}

header img {
  height: 100%;
}

.introduction {
  width: 50%;
}

.images {
  margin-top: 3rem
}

.selector {
  display: flex;
  justify-content: center;
  gap: 5ch;
  font-size: 2rem;
}

.select {
  cursor: pointer;
}

.select:not(.active)::after {
  display:block;
  content: '';
  border-bottom: 3px solid var(--black);
  transform: scaleX(0);
  transition: transform 250ms ease-in-out;
}

.select:hover::after {
  transform: scaleX(1);
}

.select.active {
  border-bottom: 3px solid var(--primary);
}

.image-list {
  width: 100%;
  margin-top: 3rem;
  column-count: 3;
  column-gap: 1rem;
  row-gap: 1rem;
}

.image-list img {
  width: 100%;
  margin-bottom: 1rem;
  transition: all 0.5s ease;
  cursor: pointer;
}

.image-list img:hover {
  transform: scale(1.05);
}

.image-preview {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  display: none;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.8);
  padding: 1rem;
  cursor: pointer;
}

.image-preview > img {
  width: 100%;
}

.image-preview.active {
  display: flex;
}

@media screen and (max-width: 900px) {
  :root {
    font-size: 12px;
  }

  header {
    flex-direction: column;
  }

  header > .introduction {
    width: 100%;
  }

  header .image {
    order: -1;
    width: 100%;
    display: flex;
    justify-content: center;
  }

  .image img {
    height: 100%;
  }
}

@media screen and (max-width: 700px) {
  body {
    padding: 3rem;
  }

  .selector {
    flex-direction: column;
    gap: 1rem;
    align-items: center;
  }

  .image-list {
    column-count: 2;
  }
}

